--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,2 +1,4 @@
 <p><%= @picture.title %>, <%= @picture.artist %></p>
+<%= link_to("Back to Pictures", "/pictures") %>
+
 <img src="<%= @picture.url %>">
