DRY'd up some of the pictures_controller with before_action helper functions

--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,21 +1,13 @@
-<h1>Welcome to Photgur!</h1>
-<%= link_to("New Picture", "/pictures/new") %>
-
-<% @most_recent_pictures.each do |picture| %>
-  <p><%= picture.title %>, <%= picture.artist %></p>
-  <a href="/pictures/<%= picture.id %>"> <img src="<%= picture.url %>" alt="<%= picture.title %>"></a>
-<% end %>
-
-<% @month_old.each do |picture| %>
-  <p><%= picture.title %>, <%= picture.artist %></p>
-  <a href="/pictures/<%= picture.id %>"> <img src="<%= picture.url %>" alt="<%= picture.title %>"></a>
-<% end %>
+<h1>Welcome to Photogur!</h1>
+<%= link_to("New Picture", new_picture_path) %>
 
 <br />
 
-<%= @month_old.length %>
-
-<% @pictures_2018.each do |picture| %>
+<% @most_recent_pictures.each do |picture| %>
+  <%= link_to image_tag(picture.url, border: 0), picture_path(picture) %>
   <p><%= picture.title %>, <%= picture.artist %></p>
-  <a href="/pictures/<%= picture.id %>"> <img src="<%= picture.url %>" alt="<%= picture.title %>"></a>
+<% end %>
+
+<% @month_old.each do |picture| %>
+  
 <% end %>
