--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,4 +1,8 @@
-<p><%= @picture.title %>, <%= @picture.artist %></p>
-<%= link_to("Back to Pictures", "/pictures") %> | <%= link_to("Edit", "/pictures/#{@picture.id}/edit") %> | <%= link_to("Delete", "/pictures/#{@picture.id}", method: :delete, data: {confirm: "Are you sure you want to delete this picture?"})  %>
+<h1><%= @picture.title %>, <%= @picture.artist %></h1>
+<%= link_to("Back to Pictures", "/pictures") %>
 
+<% if current_user %>
+ | <%= link_to("Edit", "/pictures/#{@picture.id}/edit") %> | <%= link_to("Delete", "/pictures/#{@picture.id}", method: :delete, data: {confirm: "Are you sure you want to delete this picture?"})  %>
+<% end %>
+<br />
 <img src="<%= @picture.url %>">
