--- a/app/assets/stylesheets/pictures.scss
+++ b/app/assets/stylesheets/pictures.scss
@@ -1,3 +1,143 @@
 // Place all the styles related to the pictures controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+html, body, header, p,
+h1, h2, h3, h4, h5, div {
+  margin: 0;
+}
+img {
+  width: 100%;
+}
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.new_pic_btn {
+  background-color: rgb(223, 165, 79);
+  text-decoration: none;
+  color: #FFF;
+  padding: 0.5em;
+  border-radius: 5px;
+  margin: 0 0.25em;
+} 
+.new_pic_btn:hover {
+  background-color: rgb(243, 185, 99);
+}
+.login_btn,
+.signup_btn,
+.logout_btn {
+  color: #FFF;
+  text-decoration: none;
+  font-size: .8em;
+  margin: 0 0.5em;
+  padding: .6em;
+  border-radius: 5px;
+}
+.login_btn:hover,
+.signup_btn:hover,
+.logout_btn:hover {
+  background-color: #333;
+}
+.login_signup span {
+  color: rgb(51, 182, 167);
+}
+.login_signup {
+  font-size: 0.8em
+}
+.new_pic_btn {
+  margin-left: 1em; 
+}
+.header_home_btn {
+  text-decoration: none;
+  font-size: 1.5em;
+  font-weight: 900;
+  color: #FFF;
+}
+
+.welcome {
+  margin-bottom: 1em;
+}
+.welcome span,
+.header_home_btn span,
+.login_signup_home_button span {
+  color: rgb(233, 175, 89);
+}
+
+.application_body,
+.login_signup_body {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #222;
+  color: #FFF;
+}
+.application_body header {
+  background-color: #000;
+  padding: 1.2em;
+}
+.application_body main {
+  margin: 1.5em;
+}
+.login_signup_body {
+  background-color: #111;
+}
+.picture_box img{
+width: 300px;
+}
+
+.picture_box,
+.picture_full {
+  overflow: hidden;
+  position: relative;
+  display: inline-block;
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px #111;
+  background-color: #444;
+  padding: 0;
+  margin: 0;
+  position: relative;
+}
+.picture_box h5,
+.picture_title {
+  padding: 0.5em 0 1em 0;
+}
+
+form input[type="submit"] {
+  padding: 0.5em !important;
+  font-size: 1em !important;
+  border: none;
+  background-color:	rgb(51, 182, 167);
+  border-radius: 5px;
+	color: #FFF;
+}
+
+form input {
+  border-radius: 5px;
+  background-color: #000;
+  color: #FFF;
+  border: none;
+  font-size: 1em;
+  margin: 0.5em;
+  padding: 0.5em;
+}
+form input[type="submit"]:hover {
+  background-color:	rgb(61, 192, 177);
+  cursor: pointer;
+}
+
+.login_signup_home_button {
+  text-decoration: none;
+  display: inline-block;
+  color: #FFF;
+  font-size: 5em;
+  font-weight: 900;
+  margin: 1em;
+}
+
+.fields {
+  display: inline-block;
+  background-color: #333;
+  padding: 0.5em;
+  border-radius: 5px;
+}
