--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,20 +2,13 @@
 <html>
 <head>
   <title>Photogur</title>
-  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="login_signup_body">
 
-  <p class="userinfo">
-    <% if current_user %>
-      Signed in as <%= current_user.email %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
-    <% else %>
-      <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
-    <% end %> 
-    | <%= link_to "Home", :root %>
-  </p>
+  <a href="/pictures" class="login_signup_home_button">Photo<span>gur</span></a>
 
   <%= yield %>
 
