--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,14 +1,15 @@
-<h1>Welcome to Photogur!</h1>
-<% if current_user %>
-  <%= link_to("New Picture", new_picture_path) %>
-<% end %>
+<h1 class="welcome">Welcome to Photo<span>gur</span>!</h1>
 
-<br />
+<div class="picture_index">
 
-<% @most_recent_pictures.each do |picture| %>
-  <%= link_to image_tag(picture.url, border: 0), picture_path(picture) %>
-  <p><%= picture.title %>, <%= picture.artist %></p>
-<% end %>
+  <% @most_recent_pictures.each do |picture| %>
+    <div class="picture_box">
+      <%= link_to image_tag(picture.url, border: 0), picture_path(picture) %>
+      <h5><%= picture.title %></h5>
+    </div>
+  <% end %>
+
+</div>
 
 <% @month_old.each do |picture| %>
   
