--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,4 +1,3 @@
-<h1>Add a picture</h1>
-<%= link_to("Back to Pictures", "/pictures") %>
-
+<p>- add a picture -</p>
+<br />
 <%= render "picture_form", picture: @picture %>
