--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,8 +1,13 @@
-<h2><%= @picture.title %> | <%= @picture.artist %></h2>
-<%= link_to("Back to Pictures", "/pictures") %>
+
 
 <% if current_user && @picture.user_id == current_user.id %>
- | <%= link_to("Edit", "/pictures/#{@picture.id}/edit") %> | <%= link_to("Delete", "/pictures/#{@picture.id}", method: :delete, data: {confirm: "Are you sure you want to delete this picture?"})  %>
+ | <%= link_to "Edit", edit_picture_url(@picture) %> | <%= link_to("Delete", picture_path(@picture), method: :delete, data: {confirm: "Are you sure you want to delete this picture?"})  %>
 <% end %>
-<br />
-<img src="<%= @picture.url %>">
+
+<div class="picture_full">
+  <img src="<%= @picture.url %>">
+  <div class="picture_title">
+    <h2><%= @picture.title %></h2>
+    <p><span>by: </span><%= @picture.artist %></p>
+  </div>
+</div>
