--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,8 +1,16 @@
+<div class="img_nav">
 
+  <% if @previous_picture %>
+    <%= link_to "<", picture_path(@previous_picture) %>
+  <% else %>
+    <p></p>
+  <% end %>
 
-<% if current_user && @picture.user_id == current_user.id %>
- | <%= link_to "Edit", edit_picture_url(@picture) %> | <%= link_to("Delete", picture_path(@picture), method: :delete, data: {confirm: "Are you sure you want to delete this picture?"})  %>
-<% end %>
+  <% if @next_picture %>
+    <%= link_to "Next Post >", picture_path(@next_picture) %>
+  <% end %>
+
+</div>
 
 <div class="picture_full">
   <img src="<%= @picture.url %>">
@@ -10,4 +18,10 @@
     <h2><%= @picture.title %></h2>
     <p><span>by: </span><%= @picture.artist %></p>
   </div>
+</div>
+
+<div class="edit_delete_btn">
+  <% if current_user && @picture.user_id == current_user.id %>
+  <%= link_to "Edit", edit_picture_url(@picture) %><%= link_to("Delete", picture_path(@picture), method: :delete, data: {confirm: "Are you sure you want to delete this picture?"})  %>
+  <% end %>
 </div>
