Changed edit page formatting to be same as new page

--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -1,7 +1,4 @@
-<h1>Edit Picture</h1>
-
-<p>
-  <%= link_to("Back", "/pictures/#{@picture.id}") %>
-</p>
+<p>- edit picture -</p>
+<br />
 
 <%= render "picture_form", picture: @picture %>
