--- a/app/assets/stylesheets/pictures.scss
+++ b/app/assets/stylesheets/pictures.scss
@@ -5,20 +5,24 @@ html, body, header, p,
 h1, h2, h3, h4, h5, div {
   margin: 0;
 }
-img {
-  width: 100%;
-}
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 main {
-  position: relative;
+  margin: 1.5em auto;
+  text-align: center;
+  max-width: 960px;
+  padding: 0 3em;
+}
+img {
+  width: 100%;
+  display: block;
 }
 
 .new_pic_btn {
-  background-color: rgb(223, 165, 79);
+  background-color: rgb(233, 175, 89);
   text-decoration: none;
   color: #FFF;
   padding: 0.5em;
@@ -81,30 +85,48 @@ main {
   background-color: #000;
   padding: 1.2em;
 }
-.application_body main {
-  margin: 1.5em;
-}
 .login_signup_body {
   background-color: #111;
 }
-.picture_box img{
-width: 300px;
-}
-
 .picture_box,
 .picture_full {
   overflow: hidden;
   display: inline-block;
   border-radius: 5px;
-  box-shadow: 1px 1px 3px #111;
+  box-shadow: 0 1px 3px #111;
   background-color: #444;
 }
-.picture_full {
-  top: -50px;
+.picture_box {
+  position: relative;
+  display: inline-block;
+  box-shadow: 0 1px 3px #111;
 }
-.picture_box h5,
-.picture_title {
+.picture_box img{
+width: 300px;
+}
+
+.picture_box h5 {
   padding: 0.5em 0 1em 0;
+}
+.picture_title {
+  padding: 0.8em 0;
+}
+.edit_delete_btn {
+  display: flex;
+  justify-content: center;
+}
+.img_nav {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-bottom: 0.2em;
+}
+.img_nav > a {
+  background-color:	rgb(51, 182, 167);
+  color: #FFF;
+  text-decoration: none;
+  padding: .5em;
+  border-radius: 5px;
 }
 
 form input[type="submit"] {
@@ -144,23 +166,5 @@ form input[type="submit"]:hover,
   display: inline-block;
   background-color: #333;
   padding: 0.5em;
-  border-radius: 5px;
-}
-
-.edit_delete_btn {
-  display: flex;
-  justify-content: center;
-}
-.img_nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 0.2em;
-}
-.img_nav > a {
-  background-color:	rgb(51, 182, 167);
-  color: #FFF;
-  text-decoration: none;
-  padding: .5em;
   border-radius: 5px;
 }
